testdata/baselines/reference/submodule/compiler/jsNoImplicitAnyNoCascadingReferenceErrors.errors.txt
index.js(3,21): error TS8026: Expected Foo<T> type arguments; provide these with an '@extends' tag.
index.js(5,9): error TS2346: Call target does not contain any signatures.


==== somelib.d.ts (0 errors) ====
    export declare class Foo<T> {
        prop: T;
    }
==== index.js (2 errors) ====
    import {Foo} from "./somelib";
    
    class MyFoo extends Foo {
                        ~~~
!!! error TS8026: Expected Foo<T> type arguments; provide these with an '@extends' tag.
        constructor() {
            super();
            ~~~~~
!!! error TS2346: Call target does not contain any signatures.
            this.prop.alpha = 12;
        }
    }
    